# tvs-mystoreguard-bk

./: .dockerignore  .gitignore  README.md  azure-pipelines-cd.yml  azure-pipelines-ci.yml  azure-pipelines.yml  build-and-push.sh  docker-compose.yml  script_app_setup.sh
app/: .dockerignore  .env.backup  .env.example  Dockerfile  README.md  gunicorn.conf.py  main.py  pyproject.toml
app/src/configs/: database.py  logging.py  settings.py
app/src/entities/affiliates/: __init__.py  affiliates_base.py  affiliates_controller.py  affiliates_read_dto.py  affiliates_service.py  affiliates_write_dto.py
app/src/entities/appointments/: __init__.py  appointments_base.py  appointments_controller.py  appointments_read_dto.py  appointments_service.py  appointments_write_dto.py
app/src/entities/clients/: __init__.py  clients_base.py  clients_controller.py  clients_read_dto.py  clients_service.py  clients_write_dto.py
app/src/entities/currencies/: __init__.py  currencies_base.py  currencies_controller.py  currencies_read_dto.py  currencies_service.py
app/src/entities/customers/: __init__.py  customers_base.py  customers_controller.py  customers_read_dto.py  customers_service.py  customers_write_dto.py
app/src/entities/dashboard/: __init__.py  dashboard_base.py  dashboard_controller.py  dashboard_read_dto.py  (+2 more)
app/src/middleware/: __init__.py  exception_handler.py  logging_middleware.py
app/src/utils/: auth.py  backdate.py  formula_evaluator.py  helper_patch.py  logging_utils.py  pricing_calculator.py  product_price_calculator.py  sales_price_calculator.py
func/: README.md  (+3 more)
(+238 files in other folders)
